<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ccnulib="http://schemas.android.com/apk/res/com.wangwenfeng.ccnulib"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f5f5f5"
    android:clickable="true"
    android:orientation="vertical" >

    <com.wangwenfeng.ccnulib.ui.common.LibActionBar
        android:id="@+id/action_bar"
        ccnulib:style="title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ccnulib:icon="@drawable/side_bar_icon_book_hist"
        ccnulib:title="@string/find_password_new" >
    </com.wangwenfeng.ccnulib.ui.common.LibActionBar>

    <AutoCompleteTextView
        android:id="@+id/findpassword_id"
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:layout_marginLeft="7.0dip"
        android:layout_marginRight="7.0dip"
        android:layout_marginTop="7.0dip"
        android:background="@drawable/register_input_group_bgdrw"
        android:completionThreshold="1"
        android:hint="@string/please_enter_your_id_add"
        android:paddingLeft="11.0dip"
        android:paddingRight="11.0dip"
        android:singleLine="true"
        android:textColor="@color/c_ff000000"
        android:textColorHint="@color/c_ff8c8c8c"
        android:textSize="15.0dip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7.0dip"
        android:layout_marginLeft="9.0dip"
        android:layout_marginRight="9.0dip"
        android:layout_marginTop="7.0dip"
        android:text="@string/find_password_directions"
        android:textColor="@color/c_ffc4c4c4"
        android:textSize="12sp" />

    <Button
        android:id="@+id/findpassword_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7.0dip"
        android:layout_marginRight="7.0dip"
        android:layout_marginTop="29.0dip"
        android:background="@drawable/register_findpsw_btn"
        android:padding="7.0dip"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="15.0dip" />

</LinearLayout>