<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ccnulib="http://schemas.android.com/apk/res/com.wangwenfeng.ccnulib"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ff2f2f2f"
    android:clickable="true"
    android:orientation="vertical" >

    <com.wangwenfeng.ccnulib.ui.common.LibActionBar
        android:id="@+id/action_bar"
        ccnulib:style="title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ccnulib:icon="@drawable/side_bar_icon_book_hist"
        ccnulib:title="@string/about" >
    </com.wangwenfeng.ccnulib.ui.common.LibActionBar>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/about_title" />

                <Button
                    android:id="@+id/about_new_features"
                    android:layout_width="111.0px"
                    android:layout_height="48.0px"
                    android:layout_gravity="top|left|center"
                    android:layout_marginLeft="220.0px"
                    android:layout_marginTop="140.0px"
                    android:background="#00000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right|center"
                    android:layout_marginBottom="16.0dip"
                    android:layout_marginRight="21.0dip"
                    android:text="@string/verson"
                    android:textColor="@color/white"
                    android:textSize="8.0dip" />
            </FrameLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12.0dip" >

                    <Button
                        android:id="@+id/about_visit_app_website"
                        android:layout_width="fill_parent"
                        android:layout_height="43.0dip"
                        android:background="@drawable/about_btn_first"
                        android:gravity="left|center"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:singleLine="true"
                        android:text="@string/visit_app_website"
                        android:textColor="@color/c_ffcacaca" />

                    <Button
                        android:id="@+id/about_visit_app_weibo"
                        android:layout_width="fill_parent"
                        android:layout_height="43.0dip"
                        android:background="@drawable/about_btn_middle"
                        android:gravity="left|center"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:singleLine="true"
                        android:text="@string/visit_app_weibo"
                        android:textColor="@color/c_ffcacaca" />

                    <Button
                        android:id="@+id/about_customer_service_hotline"
                        android:layout_width="fill_parent"
                        android:layout_height="43.0dip"
                        android:background="@drawable/about_btn_middle"
                        android:gravity="left|center"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:singleLine="true"
                        android:text="@string/customer_service_hotline"
                        android:textColor="@color/c_ffcacaca" />

                    <Button
                        android:id="@+id/about_customer_service_mail"
                        android:layout_width="fill_parent"
                        android:layout_height="43.0dip"
                        android:background="@drawable/about_btn_last"
                        android:gravity="left|center"
                        android:paddingLeft="12.0dip"
                        android:paddingRight="12.0dip"
                        android:singleLine="true"
                        android:text="@string/customer_service_mail"
                        android:textColor="@color/c_ffcacaca" />
                </LinearLayout>
            </ScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/copyright_string"
                android:textColor="@color/c_ffe9e9e9"
                android:textSize="8.0dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="13.0dip"
                android:text="@string/company_name"
                android:textColor="@color/c_ffababab"
                android:textSize="8.0dip" />
        </LinearLayout>

        <include layout="@layout/iar_title_shadow" />
    </FrameLayout>

</LinearLayout>